Add html for page header

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header>
+            <h1>Motivational Quotes</h1>
+        </header>
+
     </body>
 </html>
