Add html for article with sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
         <header>
             <h1>Motivational Quotes</h1>
         </header>
-
+        <article>
+            <section>
+                <p> “But do you know how old I will be by the time I learn to really play the piano / act / paint / write a decent play? <br>Yes . . . the same age you will be if you don't.”</p>
+                <p>/ Julia Cameron, The Artist's Way: A Spiritual Path to Higher Creativity</p>
+            </section>
+            <section>
+                <p>“Life isn't about waiting for the storm to pass, it's about learning how to dance in the rain”</p>
+                <p> / Vivian Greene</p>
+            </section>
+            <section>
+                <p>“Don't be upset with the results you didn't get from the work you didn't do”</p>
+                <p> / Harvey Specter</p>
+            </section>
+            <section>
+                <p>Rozumienie jest trudne, dlatego wiekszość ludzi ocenia”</p>
+                <p> / Carl G. Jungr</p>
+            </section>
+        </article>
     </body>
 </html>
